--- a/example/11-FragmentShader/Source/makefile
+++ b/example/11-FragmentShader/Source/makefile
@@ -2,8 +2,14 @@ CC=g++
 LIBS=-lglut -lGLU -lGL -lGLEW
 INC=-I../../../Include -I../Include 
 CFLAGS=-g -std=c++11
+TARGETS=SimpleExample.out \
+        BlendingExample.out \
+		GrayScaleCube.out \
+        ViewManager.o \
+		GrayScaleCube.o \
+		ImageProcessing.out
 
-all: SimpleExample.out BlendingExample.out
+all: $(TARGETS)
 
 SimpleExample.out: SimpleExample.cpp
 	$(CC) $(CFLAGS) -o $@ $^ $(INC) $(LIBS)
@@ -11,7 +17,19 @@ SimpleExample.out: SimpleExample.cpp
 BlendingExample.out: BlendingExample.cpp
 	$(CC) $(CFLAGS) -o $@ $^ $(INC) $(LIBS)
 
+ImageProcessing.out: ImageProcessing.cpp
+	$(CC) $(CFLAGS) -o $@ $^ $(INC) $(LIBS)
+
+ViewManager.o: ViewManager.cpp
+	$(CC) $(CFLAGS) -c  $^ $(INC)
+
+GrayScaleCube.o: GrayScaleCube.cpp
+	$(CC) $(CFLAGS) -c  $^ $(INC)
+
+GrayScaleCube.out: GrayScaleCube.cpp ViewManager.o
+	$(CC) $(CFLAGS) -o $@ $^ $(INC) $(LIBS)
+
 .PHONY: clean
 clean:
-	rm *.o
-	rm *.out
+	rm $(TARGETS)
+
